alignment Issue Fixed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -49,3 +49,11 @@ body {
 .is-text-center {
   text-align: center !important;
 }
+
+.is-text-right {
+  text-align: right !important;
+}
+
+.is-text-left {
+  text-align: left !important;
+}
